--- a/README.Rmd
+++ b/README.Rmd
@@ -85,8 +85,8 @@ Please refer [detailed documentation with examples](https://scicloj.github.io/ta
     (api/dataset {:key-fn keyword})
     (api/group-by (fn [row]
                     {:symbol (:symbol row)
-                     :year (tech.v2.datatype.datetime.operations/get-years (:date row))}))
-    (api/aggregate #(tech.v2.datatype.functional/mean (% :price)))
+                     :year (tech.v3.datatype.datetime/long-temporal-field :years (:date row))}))
+    (api/aggregate #(tech.v3.datatype.functional/mean (% :price)))
     (api/order-by [:symbol :year])
     (api/head 10))
 ```
@@ -94,7 +94,6 @@ Please refer [detailed documentation with examples](https://scicloj.github.io/ta
 ## TODO
 
 * tests
-* dataset manipulation (`tech.v2.datatype.functional`) functions
 
 ## Licence
 
